# datai-assessor-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-dev.yml  deploy.yml
app/: api.py  main.py  models.py  services.py
scripts/: grant_sa_roles.sh  setup_wif.sh  tfstate.sh
terraform/: backend.tf  main.tf  variables.tf
