[project]
name = "datai-assessor-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.128.8",
    "google-cloud-aiplatform>=1.148.1",
    "pydantic>=2.13.4",
    "uvicorn>=0.39.0",
]
